--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -5,9 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: jitterbit/get-changed-files@v1
+        with: 
+          format: 'csv'
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+        - run: |
+            mapfile -d ',' -t added_modified_files < <(printf '%s,' '${{ steps.files.outputs.added_modified }}')
+            for added_modified_file in "${added_modified_files[@]}"; do
+              echo "Do something with this ${added_modified_file}."
+            done
       - run: pip3 install requests
       - run: python3 to_stackoverflow.py
         env:
