--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jitterbit/get-changed-files@v1
         with: 
-          format: 'csv'
+          format: 'json'
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
