--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -5,9 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: jitterbit/get-changed-files@v1
-        with: 
-          format: 'json'
+      - id: files
+        uses: jitterbit/get-changed-files@v1
+          with: 
+            format: 'json'
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
