--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: jitterbit/get-changed-files@v1
+      - uses: jitterbit/get-changed-files@v1 
         id: files
-        with:
-          format: space-delimited
+        with: 
+          format: 'csv'
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
