--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: jitterbit/get-changed-files@v1 
+      - name: Get All Changed Files
+        uses: jitterbit/get-changed-files@v1
         id: files
       - uses: actions/setup-python@v2
         with:
