--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -5,17 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Get All Changed Files
-        uses: jitterbit/get-changed-files@v1
-        id: files
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      - name: (CI) Dependencies update check
       - run: |
-          mapfile -d ',' -t added_modified_files < <(printf '%s,' '${{ steps.files.outputs.added_modified }}')
-          for added_modified_file in "${added_modified_files[@]}"; do
-            echo "Do something with this ${added_modified_file}."
-          done
+          current_commit=`git log -n 1 --pretty=format:%H`
+          echo $current_commit
+          last_deps_mod_commit=`git log -n 1 --pretty=format:%H -- composer.json`
+          echo $last_deps_mod_commit
+          if [ $current_commit == $last_deps_mod_commit ]; then echo USE_LOCK=0 > ci.conf; else echo USE_LOCK=1 > ci.conf; fi
       - run: pip3 install requests
       - run: python3 to_stackoverflow.py
         env:
