--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: jitterbit/get-changed-files@v1
+        id: files
         with: 
           format: 'csv'
       - uses: actions/setup-python@v2
