--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   Publish_Article:
     runs-on: ubuntu-latest
+    environment: StackOverflow
     steps:
       - uses: actions/checkout@v2
       - uses: jitterbit/get-changed-files@v1
@@ -14,8 +15,8 @@ jobs:
           python-version: '3.x'
       - run: pip3 install requests
       - env:
-          KEY: ${{ secrets.StackOverflow.KEY }} 
-          ACCESS_TOKEN: ${{ secrets.StackOverflow.ACCESS_TOKEN }}
+          KEY: ${{ secrets.KEY }} 
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
           mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
           mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
