--- a/.github/workflows/stack-article.yml
+++ b/.github/workflows/stack-article.yml
@@ -15,8 +15,8 @@ jobs:
           python-version: '3.x'
       - run: pip3 install requests
       - env:
-          KEY: ${{ secrets.KEY }} 
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          KEY: ${{ secrets.STACK_KEY }} 
+          ACCESS_TOKEN: ${{ secrets.STACK_ACCESS_TOKEN }}
         run: |
           mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
           mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
