--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -42,6 +42,7 @@ jobs:
             python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
           done
       -name: iterate through removed files
+       run: |
           for removed_file in "${removed_files[@]}" 
           do
             python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
