--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -5,7 +5,7 @@ on:
   #REPLACE WITH BRANCH NAME OF YOUR CHOOSING
     branches: [ main ]
 jobs:
-  StackOverflow_Articles:
+  Stack_Articles:
     runs-on: ubuntu-latest
     #REPLACE 'StackOverFlow' WITH THE NAME OF YOUR SECRETS ENVIRONMENT
     environment: StackOverflow
@@ -46,7 +46,7 @@ jobs:
             python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
           done
       -name: "iterate through removed files"
-       run: |
+        run: |
           for removed_file in "${removed_files[@]}" 
           do
             python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
