--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -13,43 +13,43 @@ jobs:
     env:
       KEY: ${{ secrets.STACK_KEY }} 
       ACCESS_TOKEN: ${{ secrets.STACK_ACCESS_TOKEN }}
-    #NO NEED TO REPLACE ANYTHING BELOW THIS LINE
+    #### NO NEED TO REPLACE ANYTHING BELOW THIS LINE ####
     steps:
-      - name: "import checkout action"
-        uses: actions/checkout@v2
-      - name: "import get-changed-files action"
-        uses: jitterbit/get-changed-files@v1
-        id: files
-        with: 
-          format: 'csv'
-      - name: "install and setup Python 3"
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: "install needed packages"
-        run: pip3 install requests
-      - name: "map list of changed files to variables"
-        run: |
-          mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
-          mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
-          mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
-      - name: "iterate through added files"
-        run: |
-          for added_file in "${added_files[@]}"
-          do
-            python3 to_stackoverflow.py ${added_file} add "$KEY" "$ACCESS_TOKEN"
-          done
-      - name: "iterate through modified files"
-        run: |
-          for modified_file in "${modified_files[@]}"
-          do
-            python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
-          done
-      -name: "iterate through removed files"
-        run: |
-          for removed_file in "${removed_files[@]}" 
-          do
-            python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
-          done
-      - name: "done!"
-        run: echo "🔎 Pushed from ${{ github.ref }} to ${{ github.repository }} and updated StackOverflow articles accordingly."
+    - name: "import checkout action"
+      uses: actions/checkout@v2
+    - name: "import get-changed-files action"
+      uses: jitterbit/get-changed-files@v1
+      id: files
+      with: 
+        format: 'csv'
+    - name: "install and setup Python 3"
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: "install needed packages"
+      run: pip3 install requests
+    - name: "map list of changed files to variables"
+      run: |
+        mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
+        mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
+        mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
+    - name: "iterate through added files"
+      run: |
+        for added_file in "${added_files[@]}"
+        do
+          python3 to_stackoverflow.py ${added_file} add "$KEY" "$ACCESS_TOKEN"
+        done
+    - name: "iterate through modified files"
+      run: |
+        for modified_file in "${modified_files[@]}"
+        do
+          python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
+        done
+    -name: "iterate through removed files"
+      run: |
+        for removed_file in "${removed_files[@]}" 
+        do
+          python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
+        done
+    - name: "done!"
+      run: echo "🔎 Pushed from ${{ github.ref }} to ${{ github.repository }} and updated StackOverflow articles accordingly."
