--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -5,7 +5,7 @@ on:
   #REPLACE WITH BRANCH NAME OF YOUR CHOOSING
     branches: [ main ]
 jobs:
-  Stack_Articles:
+  Stack-Articles:
     runs-on: ubuntu-latest
     #REPLACE 'StackOverFlow' WITH THE NAME OF YOUR SECRETS ENVIRONMENT
     environment: StackOverflow
@@ -45,7 +45,7 @@ jobs:
         do
           python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
         done
-    -name: "iterate through removed files"
+    - name: "iterate through removed files"
       run: |
         for removed_file in "${removed_files[@]}" 
         do
