--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -28,11 +28,15 @@ jobs:
         python-version: '3.x'
     - name: "install needed packages"
       run: pip3 install requests
-    - name: "map list of changed files to variables"
+    - name: "map list of changed files to variables and print their names"
       run: |
         mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
         mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
         mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
+        echo "added files: ${added_files[@]}"
+        echo "modified files: ${modified_files[@]}"
+        echo "removed files: ${removed_files[@]}"
+
     - name: "iterate through added files"
       run: |
         for added_file in "${added_files[@]}"
