--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -45,7 +45,7 @@ jobs:
         done
     - name: "iterate through modified files"
       run: |
-        for modified_file in ${modified_files[@]}
+        for modified_file in "${modified_files[@]}"
         do
           python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
         done
