--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -39,20 +39,17 @@ jobs:
 
     - name: "iterate through added files"
       run: |
-        for added_file in "${added_files[@]}";
-        do
+        for added_file in "${added_files[@]}"; do
           python3 to_stackoverflow.py ${added_file} add "$KEY" "$ACCESS_TOKEN"
         done
     - name: "iterate through modified files"
       run: |
-        for modified_file in "${modified_files[@]}";
-        do
+        for modified_file in "${modified_files[@]}"; do
           python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
         done
     - name: "iterate through removed files"
       run: |
-        for removed_file in "${removed_files[@]}";
-        do
+        for removed_file in "${removed_files[@]}"; do
           python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
         done
     - name: "done!"
