--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -44,9 +44,9 @@ jobs:
         done
     - name: "iterate through modified files"
       run: |
-        for modified_file in "${modified_files[@]}"; do
-          python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
-        done
+        #for modified_file in "${modified_files[@]}"; do
+        python3 to_stackoverflow.py "${modified_files}" modify "$KEY" "$ACCESS_TOKEN"
+        #done
     - name: "iterate through removed files"
       run: |
         for removed_file in "${removed_files[@]}"; do
