--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -33,9 +33,9 @@ jobs:
         mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
         mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
         mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
-        echo "added files: ${added_files[@]}"
-        echo "modified files: ${modified_files[@]}"
-        echo "removed files: ${removed_files[@]}"
+        echo "added files: ${added_files}"
+        echo "modified files: ${modified_files}"
+        echo "removed files: ${removed_files}"
 
     - name: "iterate through added files"
       run: |
