--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -33,25 +33,25 @@ jobs:
         mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
         mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
         mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
-        echo "added files: ${added_files}"
-        echo "modified files: ${modified_files}"
+        echo "added files: ${added_files[@]}"
+        echo "modified files: ${modified_files[@]}"
         echo "removed files: ${removed_files[@]}"
 
     - name: "iterate through added files"
       run: |
-        for added_file in "${added_files}"
+        for added_file in "${added_files[@]}"
         do
           python3 to_stackoverflow.py ${added_file} add "$KEY" "$ACCESS_TOKEN"
         done
     - name: "iterate through modified files"
       run: |
-        for modified_file in "${modified_files}"
+        for modified_file in "${{ steps.files.outputs.modified }}"
         do
           python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
         done
     - name: "iterate through removed files"
       run: |
-        for removed_file in "${removed_files}" 
+        for removed_file in "${removed_files[@]}" 
         do
           python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
         done
