--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -20,8 +20,7 @@ jobs:
     - name: "import get-changed-files action"
       uses: jitterbit/get-changed-files@v1
       id: files
-      with: 
-        format: 'csv'
+
     - name: "install and setup Python 3"
       uses: actions/setup-python@v2
       with:
@@ -30,12 +29,12 @@ jobs:
       run: pip3 install requests
     - name: "map list of changed files to variables and print their names"
       run: |
-        mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
-        mapfile -d ',' -t modified_files < <(printf '${{ steps.files.outputs.modified }}')
-        mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
-        echo "added files: ${added_files[@]}"
-        echo "modified files: ${modified_files[@]}"
-        echo "removed files: ${removed_files[@]}"
+        mapfile -d ',' -t added_files < <(printf '%s,' '')
+        mapfile -d ',' -t modified_files < <(printf '%s,' '')
+        mapfile -d ',' -t removed_files < <(printf '%s,' '')
+        echo "added files: ${{ steps.files.outputs.added }}"
+        echo "modified files: ${{ steps.files.outputs.modified }}"
+        echo "removed files: ${{ steps.files.outputs.removed }}"
 
     - name: "iterate through added files"
       run: |
@@ -45,7 +44,7 @@ jobs:
         done
     - name: "iterate through modified files"
       run: |
-        for modified_file in "${modified_files[@]}"
+        for modified_file in "${{ steps.files.outputs.modified }}"
         do
           python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
         done
