--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -31,7 +31,7 @@ jobs:
     - name: "map list of changed files to variables and print their names"
       run: |
         mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
-        mapfile -d ',' -t modified_files < <(${{ steps.files.outputs.modified }})
+        mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
         mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
         echo "added files: ${added_files[@]}"
         echo "modified files: ${modified_files[@]}"
@@ -46,6 +46,7 @@ jobs:
     - name: "iterate through modified files"
       run: |
         for modified_file in "${modified_files[@]}"
+        echo "iterated"
         do
           python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
         done
