--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -20,6 +20,8 @@ jobs:
     - name: "import get-changed-files action"
       uses: jitterbit/get-changed-files@v1
       id: files
+      with: 
+        format: 'csv'
     - name: "install and setup Python 3"
       uses: actions/setup-python@v2
       with:
@@ -28,8 +30,9 @@ jobs:
       run: pip3 install requests
     - name: "map list of changed files to variables and print their names"
       run: |
+        echo "${{ steps.files.outputs.modified }}"
         mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
-        declare -i modified_files=(${{ steps.files.outputs.modified }})
+        mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
         mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
         echo "added files: ${added_files[@]}"
         echo "modified files: ${modified_files[@]}"
