--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -37,6 +37,11 @@ jobs:
         echo "added files: ${added_files[@]}"
         echo "modified files: ${modified_files[@]}"
         echo "removed files: ${removed_files[@]}"
+        for modified_file in "${modified_files[@]}"
+        do
+          echo "iterated"
+          python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
+        done
 
     - name: "iterate through added files"
       run: |
@@ -46,11 +51,7 @@ jobs:
         done
     - name: "iterate through modified files"
       run: |
-        for modified_file in "${modified_files[@]}"
-        do
-          echo "iterated"
-          python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
-        done
+      echo "h"
     - name: "iterate through removed files"
       run: |
         for removed_file in "${removed_files[@]}" 
