--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -28,35 +28,26 @@ jobs:
         python-version: '3.x'
     - name: "install needed packages"
       run: pip3 install requests
-    - name: "map list of changed files to variables and print their names"
+    - name: "map files and run script"
       run: |
-        echo "${{ steps.files.outputs.modified }}"
         mapfile -d ',' -t added_files < <(printf '%s,' '${{ steps.files.outputs.added }}')
         mapfile -d ',' -t modified_files < <(printf '%s,' '${{ steps.files.outputs.modified }}')
         mapfile -d ',' -t removed_files < <(printf '%s,' '${{ steps.files.outputs.removed }}')
-        echo "added files: ${added_files[@]}"
-        echo "modified files: ${modified_files[@]}"
-        echo "removed files: ${removed_files[@]}"
-        for modified_file in "${modified_files[@]}"
-        do
-          echo "iterated"
-          python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
-        done
 
-    - name: "iterate through added files"
-      run: |
         for added_file in "${added_files[@]}"
         do
           python3 to_stackoverflow.py ${added_file} add "$KEY" "$ACCESS_TOKEN"
         done
-    - name: "iterate through modified files"
-      run: |
-        echo "h"
-    - name: "iterate through removed files"
-      run: |
+
+        for modified_file in "${modified_files[@]}"
+        do
+          python3 to_stackoverflow.py "${modified_file}" modify "$KEY" "$ACCESS_TOKEN"
+        done
+
         for removed_file in "${removed_files[@]}" 
         do
           python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
         done
+
     - name: "done!"
       run: echo "🔎 Pushed from ${{ github.ref }} to ${{ github.repository }} and updated StackOverflow articles accordingly."
