--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -48,6 +48,15 @@ jobs:
         do
           python3 to_stackoverflow.py ${removed_file} remove "$KEY" "$ACCESS_TOKEN"
         done
-
+    - name: "commit changes to articles index and push them to repo"
+      env: 
+        GITHUB_TOKEN = ${{ github.token }}
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git remote set-url --push origin https://your_username:$GITHUB_TOKEN@github.com/your/repo
+        git add -A
+        git commit -m "Update Articles Index" -a
+        git push "https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:master
     - name: "done!"
       run: echo "🔎 Pushed from ${{ github.ref }} to ${{ github.repository }} and updated StackOverflow articles accordingly."
