--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -51,10 +51,15 @@ jobs:
         done
     - name: "commit changes to articles index and push them to repo"
       run: |
+        git remote set-url --push origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add -A
         git commit -m "Update Articles Index" -a
-        git push "https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:master
+        if [ 11 != 1 ]
+        then
+          echo "hey"
+        fi
+        git push HEAD:master
     - name: "done!"
       run: echo "🔎 Pushed from ${{ github.ref }} to ${{ github.repository }} and updated StackOverflow articles accordingly."
