--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -56,8 +56,8 @@ jobs:
         git config user.email github-actions@github.com
         git add -A
         git commit -m "Update Articles Index" -a
-        echo $(git rev-list --count)
-        if [ $(git rev-list --count) == "0" ]
+        echo $(git rev-list --count @{u}..HEAD)
+        if [ $(git rev-list --count @{u}..HEAD) == "0" ]
         then
           echo "hey file not changed lol"
         fi
