--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -51,14 +51,13 @@ jobs:
         done
     - name: "commit changes to articles index and push them to repo"
       run: |
-        git remote set-url --push origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add -A
         git commit -m "Update Articles Index" -a
         if [ $(git rev-list --count @{u}..HEAD) != 0 ]
         then
-          git push HEAD:master
+          git push "https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:master
         else
           echo "Index file not changed. Exiting..."
         fi
