--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -51,6 +51,7 @@ jobs:
         done
     - name: "commit changes to articles index and push them to repo"
       run: |
+        echo "" > webpage.html
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add -A
