--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -51,7 +51,8 @@ jobs:
         done
     - name: "commit changes to articles index and push them to repo"
       run: |
-        echo "" > webpage.html
+        git remote set-url --push origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        echo "" > haha.html
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add -A
@@ -59,7 +60,7 @@ jobs:
         if [ $(git rev-list --count @{u}..HEAD) != 0 ]
         then
           git commit -m "Update Articles Index" -a
-          git push "https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:master
+          git push HEAD:master
         else
           echo "Index file not changed. Exiting..."
         fi
