--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -51,6 +51,7 @@ jobs:
         done
     - name: "commit changes to articles index and push them to repo"
       run: |
+        cat articles_index.json
         git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         git add -A
         echo $(git rev-list --count @{u}..HEAD)
