--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -56,10 +56,11 @@ jobs:
         git add -A
         echo $(git rev-list --count HEAD..@{u})
         echo $(git rev-list --count @{u}..HEAD)
-        if [ $(git rev-list --count @{push}..HEAD}) != 0 ]
+        if [ $(git rev-list --count @{u}..HEAD}) == 0 ]
         then
-          git commit -m "Update Articles Index" -a
-          git push HEAD:master
+        echo "pushing..."
+        git commit -m "Update Articles Index" -a
+        git push HEAD:master
         else
           echo "Index file not changed. Exiting..."
         fi
