--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -52,6 +52,8 @@ jobs:
     - name: "commit changes to articles index and push them to repo"
       run: |
         cat articles_index.json
+        git config --global user.email "action@github.com"
+        git config --global user.name "Github Action"
         git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         git add -A
         echo $(git rev-list --count HEAD..@{u})
