--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -61,7 +61,7 @@ jobs:
         then
         echo "pushing..."
         git commit -m "Update Articles Index" -a
-        git merge banana
+        git merge master
         git push origin HEAD:master
         else
           echo "Index file not changed. Exiting..."
