--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -54,6 +54,7 @@ jobs:
         git config --global user.email "action@github.com"
         git config --global user.name "Github Action"
         git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        git fetch origin
         git add -A
         echo $(git rev-list --count HEAD..@{u})
         echo $(git rev-list --count @{u}..HEAD)
@@ -61,7 +62,6 @@ jobs:
         then
         echo "pushing..."
         git commit -m "Update Articles Index" -a
-        git merge master
         git push origin HEAD:master
         else
           echo "Index file not changed. Exiting..."
