--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -54,9 +54,9 @@ jobs:
         git config --global user.email "action@github.com"
         git config --global user.name "Github Action"
         git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-        git checkout -b article_branch main
         git fetch origin
-        git pull origin article_branch
+        git checkout -b article_branch main
+        git pull origin
         git add -A
         echo $(git rev-list --count HEAD..@{u})
         echo $(git rev-list --count @{u}..HEAD)
@@ -64,8 +64,6 @@ jobs:
         then
         echo "pushing..."
         git commit -m "Update Articles Index" -a
-        git checkout main
-        git merge article_branch
         git push origin HEAD:master
         else
           echo "Index file not changed. Exiting..."
