--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -53,7 +53,7 @@ jobs:
         done
     - name: "commit changes to articles index and push them to repo"
       run: |
-        
+
         git branch
         git remote -v
         git add -A
@@ -63,7 +63,7 @@ jobs:
         then
         echo "pushing..."
         git commit -m "Update Articles Index" -a
-        git push origin HEAD:master
+        git push -f origin main
         else
           echo "Index file not changed. Exiting..."
         fi
