--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -66,7 +66,7 @@ jobs:
         then
         echo "pushing..."
         git commit -m "Update Articles Index" -a
-        git push -f origin HEAD:master
+        git push -f origin HEAD:main
         else
           echo "Index file not changed. Exiting..."
         fi
