--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -53,12 +53,9 @@ jobs:
       run: |
         git config --global user.email "action@github.com"
         git config --global user.name "Github Action"
-        git branch -a
-        git branch -vv  
         git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-        git branch -vv  
-        git branch --set-upstream-to origin main  
-        git branch -vv  
+        git push -u origin main
+        git branch -vv
         git add -A
         echo $(git rev-list --count HEAD..@{upstream})
         echo $(git rev-list --count @{upstream}..HEAD)
