--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -55,15 +55,12 @@ jobs:
         git config --global user.name "Github Action"
         git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         git push -u origin main
-        git branch -vv
         git add -A
         git commit -m "Update Articles Index" -a
-        echo $(git rev-list --count HEAD..@{upstream})
-        echo $(git rev-list --count @{upstream}..HEAD)
-        if [ $(git rev-list --count @{u}..HEAD) != 0 ]
+        if [ $(git rev-list --count @{upstream}..HEAD) != 0 ]
         then
         echo "pushing..."
-        git push origin HEAD:main
+        git push -u origin HEAD:main
         else
           echo "Index file not changed. Exiting..."
         fi
