--- a/.github/workflows/stack-articles.yml
+++ b/.github/workflows/stack-articles.yml
@@ -55,13 +55,11 @@ jobs:
         git config --global user.name "Github Action"
         git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         git add -A
-        git commit -m "Update Articles Index" -a
+        git commit -m "Update Articles Index" -a || echo "Index file not changed. Exiting..."
         if [ $(git rev-list --count @{upstream}..HEAD) != 0 ]
         then
         echo "pushing..."
         git push -u origin HEAD:main
-        else
-          echo "Index file not changed. Exiting..."
         fi
     - name: "done!"
       run: echo "🔎 Pushed from ${{ github.ref }} to ${{ github.repository }} and updated StackOverflow articles accordingly."
